[B]1.1.32[/B]
Code improvements, cleanup
Added new watched flag indicators
Language strings updates (!thx semool, Dis90)
Added by director info to dialogvideoinfo
Minor adjustments

[B]1.1.31[/B]
Improvements of music OSD
Added option to disable homemenu items in skinshortcuts
Fixed issues
Added new views 521/522
Hungarian language updated

[B]1.1.30[/B]
Removed unneeded textures
Code cleanup
Improved custom blur settings
Added option for autoscroll widget titles
Fixed issues
Minor adjustments

[B]1.1.29[/B]
Improved widget diffuse textures
Added option to disable startup window
Removed unneeded textures
Fixed issues
Added tvshow provider icons to extended infos
Code cleanup

[B]1.1.28[/B]
Fixed issues with multi backgrounds and background playlists

[B]1.1.27[/B]
Background code improvements
Added trakt - add to watchlist button
Code improvements
fixed issues (!thx)
minor adjustements

[B]1.1.26[/B]
Fixed a lot of issues
Added now playing setting
Code improvements
Views adjusted for better consistency

[B]1.1.25[/B]
Fixed weather issue

[B]1.1.24[/B]
Added indicator setting
Fixed playback issue (!thx)
Code improvements, cleanup
Added tmdbhelper fallback labels
Added setting to diable next aired info

[B]1.1.23[/B]
Code improvements, cleanup
Fixed a lot of issues
Added option for widgets fade animation
Added discart for osd
Added new HDR, DolbyVision and web-dl flags
Added option to set spotlight widget path
Added autoscroll for classic widgets
Enabled extended infos for episodes

[B]1.1.22[/B]
Improvements on plot overlays
Code and texture improvements, cleanup
Language strings updated by several contributors, thx!

[B]1.1.21[/B]
Code improvements, cleanup
ColorPicker dialog improvements
DialogSelect using poster instead icon, if available
Scrollbar improvements
Texture improvements
Option to select media flags added
Added homemenu viewtype selector
Minor adjustments of now playing
Fixed a lot of issues
Ultra HD Blu Ray icon added