@@ -1,4 +1,7 @@
 [B]1.1.32[/B]
+Bugfix release
+
+[B]1.1.32[/B]
 Code improvements, cleanup
 Added new watched flag indicators
 Language strings updates (!thx semool, Dis90)
